Revision history for Getopt-Long

{{$NEXT}}

0.3.1  2020-12-15T02:24:46+01:00
    - Add support for Version objects

0.3.0  2020-12-12T17:47:08+01:00
    - Add auto-help option
    - Replaced custom argument types with coercion types
    - Add custom converter support
    - Eliminate :$overwrite from call-with-getopt
    - Abolish Exceptional

0.2.0  2020-11-15T00:00:06+01:00
    - Add auto-abbreviate option
    - Add support for custom argument types
    - Enable permute by default

0.1.8  2020-10-25T20:07:39+01:00
    - Fix compatibility with rakudo 2019.07

0.1.7  2020-10-25T13:47:29+01:00
    - Don't throw away positional arguments beyond the tenth

0.1.6  2020-03-02T00:41:33+01:00
    - Add support for enum types
    - Add IO::Path argument support
    - Add DateTime and Date argument support
    - Add type conversions for positional arguments
    - Reject values failing argument constraints
    - Add compat-positional option

0.1.5  2020-02-23T18:27:21+01:00
    - Add compat-builtin option
    - Add compat-negation option
    - Only catch Exceptional in ARGS-TO-CAPTURE

0.1.4  2020-02-11T00:13:46+01:00
    - Add compat-single option

0.1.3  2019-10-09T21:38:41+02:00
    - Parse explicit parameter formats early
    - Don't allow proto subs to be pre-parsed
    - Only throw Getopt::Long::Exceptionals

0.1.2  2019-06-08T15:32:25+02:00
    - Add support for Complex parameters
    - Make f format Num instead of Real

0.1.1  2019-05-26T15:11:45+02:00
    - Add support for Real parameters
    - Add getopt sub trait
    - Eliminate the extended integer parsing type

0.1.0  2019-02-03T01:43:46+01:00
    - Eliminate Capture in pair syntax
    - Add compound inference to pair syntax

0.0.3  2019-01-26T21:15:05+01:00
    - Added pair syntax
    - Implemented new perl6.d getopt hooks